--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <body>
     <canvas id="back-ground"></canvas>
     <div id="app">
+      <p>give alrert when window size changes</p>
+      <input type="checkbox" id="flag">
       <div class="part">
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
           Asperiores, odit saepe! Repellendus accusamus veritatis et, 
